<resources>
    <string name="app_name">Aerosafe</string>
    <string name="btn_search">Search</string>
    <string name="btn_get_information">Get Informations</string>
    <string name="btn_erase_all">Erase all</string>
    <string name="inside_search_bar">Enter an ICAO code</string>
    <string name="info_weather_conditions">Weather conditions on </string>
    <string name="info_present_conditions"><b>Present conditions : </b></string>
    <string name="info_clouds">Clouds : </string>
    <string name="info_visibility">Visibility : </string>
    <string name="info_wind">Wind : </string>
    <string name="info_temperature">Temperature : </string>
    <string name="info_dew_point">Dew point : </string>
    <string name="info_pressure">Pressure : </string>
    <string name="info_remarks">Remarks : </string>
    <string name="info_from">From</string>
    <string name="info_to">to</string>
    <string name="info_from_clouds">Clouds : </string>
    <string name="info_from_proba">Probability : </string>
    <string name="info_from_visibility">Visibility : </string>
    <string name="info_from_wind">Wind: </string>
    <string name="user_position">User position</string>
    <string name="at">at</string>
    <string name="unkonw_airport">Unknown airport</string>
    <string name="Add_one">Please add at least one airport</string>
    <string name="info_flight_category">Flight category :</string>
    <string name="delete_confirm">Careful !</string>
    <string name="delete_empty">Are you sure you want to empty the list ?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>


</resources>