<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:background="#C3D7F4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/inside_search_bar"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/btn_search"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <Button
        android:id="@+id/btn_get_information"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:text="@string/btn_get_information"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_erase_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/btn_erase_all"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_erase_all"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aerosafe" />


</androidx.constraintlayout.widget.ConstraintLayout>